--- a/docker/backend/Dockerfile
+++ b/docker/backend/Dockerfile
@@ -1,5 +1,8 @@
-FROM golang:1.20 AS dev
+FROM golang:1.23 AS dev
 WORKDIR /app
+
+# Install CompileDaemon for development hot reloading
+RUN go install github.com/githubnemo/CompileDaemon@latest
 
 # Copy go.mod and go.sum for dependency installation
 COPY go.mod go.sum ./
@@ -8,9 +11,8 @@ RUN go mod download
 # Copy the source code
 COPY . .
 
-# Install air for hot reload
-RUN go install github.com/cosmtrek/air@latest
-
-# Expose port and start Air for hot reloading
+# Expose application port
 EXPOSE 8080
-CMD ["air"]
+
+# Start the application with CompileDaemon for hot reloading
+CMD ["CompileDaemon", "--build=go build -o ./tmp/main ./cmd", "--command=./tmp/main"]
