--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,24 +1,23 @@
-version: '3.8'
-
 services:
   backend:
+    container_name: pogo_backend
     build:
       context: ../backend
-      dockerfile: ./backend/Dockerfile
+      dockerfile: ../docker/backend/Dockerfile
     ports:
       - "8080:8080"
     volumes:
-      - ../backend:/app
-      - /app/tmp
+      - ../backend:/app:cached
     environment:
       - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}?=sslmode=disable
     depends_on:
       - db
   
   frontend:
+    container_name: pogo_frontend
     build:
       context: ../frontend
-      dockerfile: ./frontend/Dockerfile
+      dockerfile: ../docker/frontend/Dockerfile
     ports:
       - "5173:5173"
     volumes:
@@ -32,9 +31,9 @@ services:
     ports:
       - "5432:5432"
     environment:
-      - POSTGRES_USER: ${POSTGRES_USER}
-      - POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      - POSTGRES_DB: ${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
