--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,5 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-*.pid
-*.pid.lock
-
-# Build/Compiled Files
-node_modules
-dist
-dist-ssr
-*.local
-/bin/
-/build/
-*.exe
-*.out
-*.tmp
-vendor/
-tmp/
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-# Env Files
+/tmp/
+/dist/
+/node_modules/
+/views/**/*.go
 .env
-*.env
-.env.*
-docker-compose.override.yml
-docker/*.env
-docker/*.log
-.dockerignore
